# sc-toolbox

./: .buildinfo  .cookietemple.yml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  README.rst  authors.html  code_of_conduct.html  contributing.html  cookietemple.cfg  genindex.html  index.html  installation.html  mypy.ini  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  readme.html  reference.html  search.html  searchindex.js  usage.html
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_package.yml  create_templates.yml  main_master_branch_protection.yml  publish_docs.yml  publish_package.yml  run_cookietemple_lint.yml  run_tests.yml  sync_project.yml
_modules/: index.html
_modules/sc_toolbox/: plot.html  tools.html
_modules/sc_toolbox/api/: calc.html  plot.html  util.html
_sources/: contributing.md.txt  usage.rst.txt
_sources/usage/: usage.md.txt
_sources/usage/plot/: sc_toolbox.plot.Colormaps.rst.txt  sc_toolbox.plot.average_expression_per_cluster.rst.txt  sc_toolbox.plot.average_expression_split_cluster.rst.txt  sc_toolbox.plot.genotype_vs_genotype_umaps.rst.txt  sc_toolbox.plot.marker_dendrogram.rst.txt  sc_toolbox.plot.standard_lineplot.rst.txt
_sources/usage/tools/: sc_toolbox.tools.correlate_to_signature.rst.txt  sc_toolbox.tools.de_res_to_anndata.rst.txt  sc_toolbox.tools.extended_marker_table.rst.txt  sc_toolbox.tools.generate_pseudobulk.rst.txt
_static/: custom_cookietemple.css  documentation_options.js
docs/: Makefile  api.rst  authors.md  authors.rst  conf.py  contributing.md  contributing.rst  index.md  index.rst  installation.md  installation.rst  make.bat  reference.rst  requirements.txt  usage.rst
docs/_static/: custom_cookietemple.css
docs/usage/: usage.md
docs/usage/plot/: sc_toolbox.plot.Colormaps.rst  sc_toolbox.plot.annotated_cell_type_umap.rst  sc_toolbox.plot.average_expression.rst  sc_toolbox.plot.average_expression_per_cell.rst  sc_toolbox.plot.average_expression_per_cluster.rst  sc_toolbox.plot.average_expression_split_cluster.rst  sc_toolbox.plot.cluster_composition_stacked_barplot.rst  sc_toolbox.plot.colors_overview.rst  sc_toolbox.plot.custom_plot_size.rst  sc_toolbox.plot.gene_boxplot.rst  sc_toolbox.plot.gene_expression_dpt_ordered.rst  sc_toolbox.plot.genotype_vs_genotype_umaps.rst  sc_toolbox.plot.marker_dendrogram.rst  sc_toolbox.plot.relative_frequencies_boxplots.rst  sc_toolbox.plot.relative_frequencies_lineplot.rst  sc_toolbox.plot.split_boxplot.rst  sc_toolbox.plot.standard_lineplot.rst  sc_toolbox.plot.volcano_plot.rst
docs/usage/tools/: sc_toolbox.tools.add_percentages.rst  sc_toolbox.tools.automated_marker_annotation.rst  sc_toolbox.tools.correlate_means_to_gene.rst  sc_toolbox.tools.correlate_to_signature.rst  sc_toolbox.tools.extended_marker_table.rst  sc_toolbox.tools.generate_count_object.rst  sc_toolbox.tools.generate_expression_table.rst  sc_toolbox.tools.generate_pseudobulk.rst  sc_toolbox.tools.ranksums_between_groups.rst  sc_toolbox.tools.relative_frequencies.rst  sc_toolbox.tools.relative_frequency_per_cluster.rst  sc_toolbox.tools.remove_outliers.rst  sc_toolbox.tools.tidy_de_table.rst
makefiles/: Linux.mk  Windows.mk
notebooks/: README.md  automated_marker_annotation.ipynb  calculate_percentage_expressed.ipynb  diffxpy_pairwise_DGE.ipynb  gene_expression_kinetics.ipynb  gene_kinetics_dpt_ordered.ipynb  gene_set_enrichment_analysis.ipynb  gene_to_gene_correlation_heatmap.ipynb  marker_correlation_score.ipynb  marker_dendrogram.ipynb  metadata_assessment.ipynb  relative_frequencies.ipynb  stacked_frequency_plots.ipynb
sc_toolbox/: __init__.py  __main__.py
sc_toolbox/api/: __init__.py
sc_toolbox/api/calc/: __init__.py
sc_toolbox/api/calc/markers/: lung_particle_markers.txt
sc_toolbox/api/plot/: __init__.py
sc_toolbox/api/plot/colormaps/: __init__.py
sc_toolbox/api/util/: __init__.py
sc_toolbox/cli/: questionary.py
sc_toolbox/cli/commands/: create.py  upgrade.py
sc_toolbox/cli/commands/templates/simple_docker/: cookiecutter.json
sc_toolbox/cli/commands/templates/simple_docker/{{ cookiecutter.project_slug }}/: Dockerfile  README.md  environment.yml  start.sh
sc_toolbox/plot/: __init__.py
sc_toolbox/tools/: __init__.py
sc_toolbox/util/: __init__.py
src/sc_toolbox/: __main__.py
src/sc_toolbox/api/calc/: __init__.py
src/sc_toolbox/api/plot/: __init__.py
src/sc_toolbox/api/util/: __init__.py
src/sc_toolbox/cli/commands/: create.py  upgrade.py
tests/: __init__.py  test_main.py  test_stub.py
usage/: usage.html
usage/plot/: sc_toolbox.plot.Colormaps.html  sc_toolbox.plot.annotated_cell_type_umap.html  sc_toolbox.plot.average_expression.html  sc_toolbox.plot.average_expression_per_cell.html  sc_toolbox.plot.average_expression_per_cluster.html  sc_toolbox.plot.average_expression_split_cluster.html  sc_toolbox.plot.cluster_composition_stacked_barplot.html  sc_toolbox.plot.colors_overview.html  sc_toolbox.plot.custom_plot_size.html  sc_toolbox.plot.gene_boxplot.html  sc_toolbox.plot.gene_expression_dpt_ordered.html  sc_toolbox.plot.genotype_vs_genotype_umaps.html  sc_toolbox.plot.marker_dendrogram.html  sc_toolbox.plot.relative_frequencies_boxplots.html  sc_toolbox.plot.relative_frequencies_lineplot.html  sc_toolbox.plot.split_boxplot.html  sc_toolbox.plot.standard_lineplot.html  sc_toolbox.plot.volcano_plot.html
usage/tools/: sc_toolbox.tools.add_percentages.html  sc_toolbox.tools.automated_marker_annotation.html  sc_toolbox.tools.correlate_means_to_gene.html  sc_toolbox.tools.correlate_to_signature.html  sc_toolbox.tools.de_res_to_anndata.html  sc_toolbox.tools.extended_marker_table.html  sc_toolbox.tools.generate_count_object.html  sc_toolbox.tools.generate_expression_table.html  sc_toolbox.tools.generate_pseudobulk.html  sc_toolbox.tools.ranksums_between_groups.html  sc_toolbox.tools.relative_frequencies.html  sc_toolbox.tools.relative_frequency_per_cluster.html  sc_toolbox.tools.remove_outliers.html  sc_toolbox.tools.tidy_de_table.html
