[tool.poetry]
name = "sc-toolbox"
version = "0.4.0"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "A collection of project templates and useful code snippets for single-cell data analysis with Scanpy."
authors = ["Lukas Heumos <lukas.heumos@posteo.net>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/schillerlab/sc-toolbox"
repository = "https://github.com/schillerlab/sc-toolbox"
documentation = "https://sc-toolbox.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]


[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
click = "^7.1.2"
rich = "^10.1.0"
PyYAML = "^5.4.1"
Jinja2 = "^2.11.3"
questionary = "^1.9.0"
cookiecutter = "^1.7.2"
requests = "^2.25.1"
matplotlib = "^3.4.1"
scanpy = "^1.7.2"
seaborn = "^0.11.1"
pandas = "^1.2.4"
scipy = "^1.6.3"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.812"
typeguard = "^2.12.0"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^3.5.4"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.12.1"
flake8 = "^3.9.1"
black = "^21.5b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
sphinx-click = "^2.5.0"
Pygments = "^2.9.0"

[tool.poetry.scripts]
sc-toolbox = "sc_toolbox.__main__:main"

[tool.black]
line-length = 120

[tool.coverage.paths]
source = ["sc_toolbox", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["sc_toolbox"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
